Fix ripple overflowing

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -20,3 +20,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.icon-button{
+  border-radius: 50%;
+}
